# OpenSesame

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG  COPYING  LICENSE-BIN  MANIFEST.in  README  android-main.py  compile_ui.sh  copyright  opensesame  opensesame-py2.7.nsi  opensesame-py3.5.nsi  opensesame.nsi  opensesameandroid.py  opensesamerun  packageandroid.py  pyproject.toml  pyterm  qt.conf  readme.md  run_unittests.py  setup-android-package.py  setup-android.py  setup-mac-anaconda.py  setup-mac-nodeappdmg.json  setup-mac-py3test.py  setup-mac.py  setup-pkg-list.py  setup-win32.py  setup-windows.py  setup.cfg  setup.py  setup_shared.py  setupcommon.py  stdeb.cfg  update-translation.py  zh_CN.ts
.github/: FUNDING.yml
PyQt4.dummy/: QtGui.py  __init__.py
data/: control  copyright  opensesame.desktop  x-opensesame-experiment.xml
debian/: changelog  control  copyright  gbp.conf  opensesame.1  opensesame.links  opensesame.manpages  opensesamerun.1  rules  upstream  watch
dev-scripts/: architecture.py  check_ts.py  code_check.py  compile_qm.sh  compile_ui-win32.sh  compile_ui.sh  docstruct.py  extract_translatables.py  item-help.py  update-hidden.py  update_ts.sh
examples/: attentional_capture_android.opensesame  counterbalancing.opensesame  extended_template.opensesame  horowitz_wolfe_1998.opensesame  joystick_demonstration.opensesame  lexical_decision.opensesame  pip_and_pop.opensesame  quest_staircase_example.opensesame  questionnaire.opensesame  synth_example.opensesame  synth_inline_example.opensesame  test_suite.opensesame  theeuwes_1992.opensesame  tilt_adaptation.opensesame  tilt_adaptation_psychopy.opensesame  tutorial.opensesame  tutorial_inline.opensesame
help/: about.html  contribute.html  feedback.html  feedback.md  general.html  general.md  inline_script.html  inline_script.md  keyboard_response.html  logger.md  (+24 more)
(+1868 files in other folders)
