[tool.poetry]
name = "opensesame-core"
version = "4.0.0a40"
description = "A graphical experiment builder for the social sciences"
authors = ["Sebastiaan Mathôt <s.mathot@cogsci.nl>"]
readme = "readme.md"
license = "COPYING"
packages = [
    {include = "openexp"},
    {include = "libopensesame"},
    {include = "libqtopensesame"},
    {include = "opensesame_extensions"},
    {include = "opensesame_plugins"}
]
include = [
    "libqtopensesame/resources/theme/default/Faba/index.theme",
    "libqtopensesame/resources/theme/default/Faba/**/*.png",
    "libqtopensesame/resources/theme/default/Faba/**/*.svg",
    "libqtopensesame/resources/theme/default/MokaSesame/index.theme",
    "libqtopensesame/resources/theme/default/MokaSesame/**/*.png",
    "libqtopensesame/resources/theme/default/MokaSesame/**/*.svg",
    "mime/opensesame.svg",
    "mime/opensesame.desktop"
]
homepage = "https://osdoc.cogsci.nl"
repository = "https://github.com/open-cogsci/OpenSesame/"

[tool.poetry.dependencies]
python = ">= 3.7"
"pyqode.core" = ">= 4"
"pyqode.python" = ">= 4"
qdatamatrix = ">= 0.1.34"
python-pseudorandom = ">= 0.3.2"
python-qnotifications = ">= 2.0.6"
python-fileinspector = ">= 1.0.2"
PyYAML = "*"
webcolors = "*"
pillow = "*"
markdown = "*"

[tool.wheel2deb.dependencies]
python = ">= 3.7"
"pyqode-python" = ">= 4"
"pyqode-core" = ">= 4"
qdatamatrix = ">= 0.1.34"
pseudorandom = "*"
qnotifications = ">= 2.0.6"
fileinspector = ">= 1.0.2"
yaml = "*"
webcolors = "*"
pil = "*"
markdown = "*"
pyqt5 = "*"
"pyqt5.qtwebengine" = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
opensesame = 'libqtopensesame.__main__:opensesame'
opensesamerun = 'libqtopensesame.__main__:opensesamerun'
